--- a/src/index.css
+++ b/src/index.css
@@ -93,3 +93,17 @@ body {
   color: var(--black-color);
 
 }
+
+body::-webkit-scrollbar {
+  width: 8px;
+}
+
+body::-webkit-scrollbar-track {
+  background: var(--red-color);
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: #ffffff;
+  border-radius: 20px;
+  border: 2px solid var(--red-color);
+}
